--- a/gghospital.html
+++ b/gghospital.html
@@ -415,10 +415,10 @@
           </div>
           <div class="fourfour">
             <h4>We are on Social Media</h4>
-            <img src="inlkd.png">
-            <img src="ytb.png">
-            <img src="ig.png">
-            <img src="fb.png">
+            <a href="default.asp"><img src="inlkd.png"></a> 
+            <a href="default.asp"><img src="ytb.png"></a>
+            <a href="default.asp"><img src="ig.png"></a>
+            <a href="default.asp"><img src="fb.png"></a> 
           </div>
 
 
